# sparrow

./: .appveyor.yml  .gitignore  .merlin  .ocamlformat  .travis.yml  Makefile  README.md  _tags  build.sh  dune  opam  setup.ml
.github/workflows/: build.yml  test.yml
script/: apply-format  check-format  promote
src/: dune
src/core/: capture.ml  clamlFrontend.ml  clangFrontend.ml  frontend.ml  frontend.mli  main.ml  options.ml  options.mli  preAnalysis.ml  preProcess.ml  preProcess.mli  spec.ml  spec.mli  vis.ml  vis.mli
src/datalog/: provenance.ml  relDUGraph.ml  relSemantics.ml  relSyntax.ml
src/domain/: absDom.mli  arrayBlk.ml  arrayBlk.mli  basicDom.ml  basicDom.mli  instrumentedMem.ml  instrumentedMem.mli  itv.ml  itv.mli  itvDom.ml  itvDom.mli  mapDom.ml  mapDom.mli  octDom.ml  octDom.mli  octImpactDom.ml  octImpactDom.mli  powDom.ml  powDom.mli  prodDom.ml  prodDom.mli  structBlk.ml  structBlk.mli  taintDom.ml  taintDom.mli
src/instance/: itvAnalysis.ml  octAnalysis.ml  octImpactAnalysis.ml  taintAnalysis.ml
src/program/: callGraph.ml  callGraph.mli  global.ml  global.mli  interCfg.ml  interCfg.mli  intraCfg.ml  intraCfg.mli
src/report/: alarmExp.ml  alarmExp.mli  report.ml  report.mli
src/semantics/: absSem.mli  apiSem.ml  itvSem.ml  itvSem.mli  octImpactSem.ml  octImpactSem.mli  octSem.ml  octSem.mli  taintSem.ml  taintSem.mli
src/slicing/: defUse.ml  dugSlicer.ml  outputDFG.ml  slice.ml  sliceDFG.ml  slicingSem.ml  slicingUtils.ml
src/sparse/: access.ml  access.mli  accessAnalysis.ml  accessAnalysis.mli  accessSem.ml  accessSem.mli  dug.ml  dug.mli  dugSlicer.ml  sparseAnalysis.ml  sparseAnalysis.mli  ssaDug.ml  ssaDug.mli  worklist.ml  worklist.mli
src/strategy/: partialFlowSensitivity.ml  partialFlowSensitivity.mli  unsoundAlloc.ml  unsoundLib.ml  unsoundLib.mli  unsoundLoop.ml  unsoundLoop.mli  unwrapAlloc.ml
src/util/: cilHelper.ml  cilHelper.mli  cilJson.ml  fileManager.ml  inline.ml  logging.ml  logging.mli  marshalManager.ml  marshalManager.mli  profiler.ml  profiler.mli  stepManager.ml  stepManager.mli  vocab.ml  vocab.mli
test/: dune  test.ml
test/basic/: array_pointer.c  array_pointer.c.answer  global_array.c  global_array.c.answer  global_static_struct.c  global_static_struct.c.answer  global_static_struct2.c  global_static_struct2.c.answer  local_dynamic_struct.c  local_dynamic_struct.c.answer  local_static_struct.c  local_static_struct.c.answer  struct_pointer.c  struct_pointer.c.answer
test/claml/: UL0.c.answer  UL0.expected  __int128_t0.c  __int128_t0.c.answer  __int128_t0.expected  __uint128_t0.c  __uint128_t0.c.answer  __uint128_t0.expected  alignof0.c  alignof0.c.answer  alignof1.expected  anonymous-struct0.c.answer  anonymous-struct0.expected  anonymous-struct1.c.answer  anonymous-struct1.expected  anonymous-struct2.c.answer  anonymous-struct2.expected  array-init0.c  array-init0.c.answer  array-init0.expected  array-subscript0.c  array-subscript0.c.answer  array-subscript0.expected  array-subscript1.c.answer  array-subscript2.c  array-subscript2.c.answer  array-subscript2.expected  array-subscript3.c  array-subscript3.expected  array-subscript4.c.answer  attr-stmt0.c.answer  attr-stmt0.expected  attribute0.c.answer  attribute0.expected  attribute1.c  attribute1.c.answer  attribute1.expected  binary_operator.expected  binop0.c  binop0.c.answer  (+266 more)
test/clang/: UL0.c  UL0.c.answer  __int128_t0.c.answer  __int128_t0.expected  __uint128_t0.c.answer  alignof0.c.answer  alignof0.expected  alignof1.c  alignof1.expected  anonymous-struct0.c  anonymous-struct0.c.answer  anonymous-struct0.expected  anonymous-struct1.c  anonymous-struct1.c.answer  anonymous-struct1.expected  anonymous-struct2.c  anonymous-struct2.c.answer  anonymous-struct2.expected  array-init0.c.answer  array-init0.expected  array-subscript0.c.answer  array-subscript0.expected  array-subscript1.c  array-subscript1.c.answer  array-subscript1.expected  array-subscript2.c.answer  array-subscript2.expected  array-subscript3.c.answer  array-subscript4.c  array-subscript4.c.answer  attr-stmt0.c  attr-stmt0.c.answer  attr-stmt0.expected  attribute0.c  attribute0.c.answer  attribute0.expected  attribute1.c  attribute1.c.answer  attribute1.expected  binary_operator.c  (+292 more)
test/interval/: memcpy.c  memcpy.c.answer  memset.c  memset.c.answer  prune_const.c  prune_const.c.answer  strncpy.c  strncpy.c.answer
test/narrowing/: narrow.c  narrow.c.answer
test/taint/: asprintf.c  asprintf.c.answer  fgetc.c  fgetc.c.answer  memcpy.c  memcpy.c.answer  printf.c  printf.c.answer  snprintf.c  snprintf.c.answer  strtok.c  strtok.c.answer  varg.c  varg.c.answer
test/unsoundness/: unsound_alloc.c  unsound_alloc.c.answer
