(include_subdirs unqualified)

(library
 (name sparrow)
 (wrapped false)
 (modules_without_implementation absDom absSem)
 (modules :standard \ vis main)
 (libraries apron apron.octMPQ batteries cil cil.all-features clangml
   clangml.printer lymp ocamlgraph str yojson)
 (preprocess
  (pps ppx_compare)))

(executable
 (name main)
 (modules main)
 (libraries apron apron.octMPQ batteries cil cil.all-features clangml
   clangml.printer lymp ocamlgraph str yojson sparrow)
 (preprocess
  (pps ppx_compare)))

(executable
 (name vis)
 (modules vis)
 (modules_without_implementation absDom absSem)
 (libraries batteries yojson sparrow)
 (preprocess
  (pps ppx_compare)))
