(include_subdirs unqualified)

(library
 (name sparrow)
 (wrapped false)
 (modules_without_implementation absDom absSem)
 (modules :standard \ vis main)
 (libraries
  apron
  apron.octMPQ
  batteries
  prosys-cil
  prosys-cil.all-features
  claml
  lymp
  ocamlgraph
  str
  yojson)
 (preprocess
  (pps ppx_compare)))

(executable
 (name main)
 (modules main)
 (libraries
  apron
  apron.octMPQ
  batteries
  prosys-cil
  prosys-cil.all-features
  claml
  lymp
  memtrace
  ocamlgraph
  str
  yojson
  sparrow)
 (preprocess
  (pps ppx_compare)))

(executable
 (name vis)
 (modules vis)
 (libraries batteries linenoise yojson sparrow)
 (preprocess
  (pps ppx_compare)))
